# Cleansweep

./: LICENSE
CleanSweep/pc-cleaner/: CHANGELOG.md  CleanSweep.bat  README.md  app.py  cleansweep.sh  install.py  pyproject.toml  run.py  setup.py
CleanSweep/pc-cleaner/templates/: index.html
