[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cleansweep"
version = "1.0.0"
description = "Free, open-source PC cleaner and optimizer for Windows, macOS, and Linux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "CleanSweep Contributors", email = "hello@cleansweep.dev" }
]
keywords = ["cleaner", "optimizer", "junk files", "pc cleaner", "disk cleanup", "cache"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "flask>=2.3.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/cleansweep/cleansweep"
Repository = "https://github.com/cleansweep/cleansweep"
"Bug Tracker" = "https://github.com/cleansweep/cleansweep/issues"

[project.scripts]
cleansweep = "run:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["templates/**", "static/**"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
